[package]
name = "staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ['init-if-needed'] }
anchor-spl = {version = "0.24.2"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
solana-program = "1.9.29"

[profile.release]
overflow-checks = true